--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
   margin-left: auto !important;
 }
 .m-15 {
-  margin: 15px !important;
+  margin: 15px 30px 15px 0 !important;
 }
 .bg-white {
   background: white !important;
@@ -80,49 +80,61 @@
 /* Utility classes */
 
 body {
-    background-color: #333;
-    color: white;
+  background-color: #333;
+  color: white;
+  font-family: gotham, sans-serif;
 }
 .wrapper {
-    height: 100vh;
-    flex-direction: column;
-    justify-content: space-between;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #site-content{
-    height: calc(100% - 60px);
+  height: calc(100% - 60px);
 }
 aside.main-menu {
-    min-width: 300px;
-    background-color: black;
+  min-width: 300px;
+  background-color: black;
 }
 
 .covers-section {
-    background-color: aquamarine;
-    padding: 20px;;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-top: 60px;
-    /* margin-top: 60px; */
-    width: calc(100% - 300px);
+  background-color: #141922;
+  padding: 20px;;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-top: 60px;
+  width: calc(100% - 300px);
 }
 .subscribe-banner {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: calc(100% - 300px);
-    height: 60px;
-    background-color: #8a2be2a1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: calc(100% - 300px);
+  height: 60px;
+  background-color: #8a2be2a1;
 
 }
 /* Covers section */
 .item {
-    width: 200px;
-    height: 200px;
-    background-color: red;
-    display: flex;
+  display: flex;
+  position: relative;
+  flex-direction: column;
 }
-
+#recently-played img {
+  width: 200px;
+  height: 90%;
+}
+#recently-played h1 {
+  width: 200px;
+  font-size: 20px;
+}
+#recently-played p {
+ text-align: center;
+ margin-top: 10px;
+ font: 15px;
+ color: gray;
+}
 
 /* Footer */
 footer#site-footer {
